# gtkwave-tcl-generator

./: Cargo.toml  README.md
src/: comment_parser.rs  display_elements.rs  file_parser.rs  main.rs  tcl_generator.rs
