[package]
name = "gtkwave_tcl_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
glob = "0.3.1"
parking_lot = "0.12.1"
string-builder = "0.2.0"
vhdl_lang = {git = "https://github.com/Rutherther/rust_hdl.git", version = "0.65.0"}
